//
// Copyright 2015, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.samples.lobby.registration.procman;

option java_package="org.spine3.samples.lobby.registration.procman";
option java_outer_classname = "RegistrationProcessManagerProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "spine/samples/lobby/common/common.proto";
import "spine/base/command.proto";

// The registration process manager state.
message RegistrationProcess {
    // The process manager ID.
    ProcessManagerId id = 1;

    // The current state of the process.
    State process_state = 2;

    // The order ID.
    spine.samples.lobby.common.OrderId order_id = 3;

    // The ID of the related conference.
    spine.samples.lobby.common.ConferenceId conference_id = 4;

    // The time of the expiration of the seats reservation.
    google.protobuf.Timestamp reservation_auto_expiration = 5;

    // The process is completed if
    // the reservation is confirmed (for free-of-charge orders) or
    // the payment is received (for billable orders).
    bool is_completed = 6;

    // The state of the process.
    enum State {
        // The initial state of the process.
        NOT_STARTED = 0;

        // The process is in this state when an order is placed by a registrant but the reservation is not confirmed yet.
        AWAITING_RESERVATION_CONFIRMATION = 1;

        // The process is in this state when the system has temporarily reserved the seats requested by the registrant.
        RESERVATION_CONFIRMED = 2;

        // The process is in this state when the payment for the order is received.
        PAYMENT_RECEIVED = 3;
    }
}

// The ID of the registration process manager.
message ProcessManagerId {
    // The UUID-based value of the ID.
    string uuid = 1;
}
